--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </p>
 
                     <div class="btn-box">
-                        <a href="#" class="btn">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1-qZQozFqok8LUPvMkfpPNSdfO88Ycdov/view?usp=sharing" class="btn" id="download-cv">Download CV</a>
                         <a href="#" class="btn contact-me">Contact Me</a>
                     </div>
                 </div>
