Updated Links and Skills section

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <h3>Student</h3>
 
                     <div class="socialmedia">
-                        <a href="#"><i class='bx bxl-facebook'></i></a>
-                        <a href="#"><i class='bx bxl-twitter' ></i></a>
-                        <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                        <a href="#"><i class='bx bxl-instagram' ></i></a>
+                        <a href="https://www.linkedin.com/in/deepak-kumar-0562a7262/"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://github.com/The-Deepak-Kumar-001"><i class='bx bxl-github'></i></a>
+                        <a href="https://x.com/__The_Deep__"><i class='bx bxl-twitter'></i></a>
+                        <a href="#"><i class='bx bxl-instagram'></i></a>
                     </div>
                     <p>Hello, I am a student of MCA with a strong background in software development, 
                         programming languages, and computer applications.<br> I am a quick learner and 
@@ -62,7 +62,7 @@
                             <h3>Institute of Management and Planning & Advance Computer Training</h3>
                             <p><b>Bachelor of Computer Application</b><br>
                                 2020-2023 | Patna, &nbsp; Bihar<br>
-                                CGPA: 8.7/10.0
+                                CGPA: 8.50/10.0
                             </p>
                         </div>
                         <div class="workduc-content">
@@ -96,15 +96,22 @@
                         </div>
                         <div class="workduc-content">
                             <span class="year"><i class='bx bxs-calendar'></i>2023</span>
-                            <h3>AI-ML Virtual Internship - AICTE</h3>
+                            <h3>AI-ML Virtual Internship - AWS Academy, AICTE</h3>
                             <p>Sep 2023 - Nov 2023 <br>
                                Online Mode
                             </p>
                         </div>
                         <div class="workduc-content">
-                            <span class="year"><i class='bx bxs-calendar'></i>2022-2023</span>
-                            <h3>Data Science Virtual Internship - AICTE</h3>
+                            <span class="year"><i class='bx bxs-calendar'></i>2024</span>
+                            <h3>Data Science Internship - ALTAIR, AICTE</h3>
                             <p>Jan 2024 - Mar 2024 <br>
+                               Online Mode
+                            </p>
+                        </div>
+                        <div class="workduc-content">
+                            <span class="year"><i class='bx bxs-calendar'></i>2024</span>
+                            <h3>AI-ML Virtual Internship - Google, AICTE</h3>
+                            <p>July 2024 - Sep 2024 <br>
                                Online Mode
                             </p>
                         </div>
@@ -124,34 +131,41 @@
 
                     <div class="skills-box">
                         <div class="skills-content">
-                            <h3>Front-End</h3>
+                            <h3>Programming</h3>
                             <div class="content">
                                 <span><i class='bx bxl-html5'></i>HTML</span>
                                 <span><i class='bx bxl-css3'></i>CSS</span>
                                 <span><i class='bx bxl-javascript'></i>JavaScript</span>
-                                <span><i class='bx bxl-react'></i>React</span>
-                                <span><i class='bx bxl-bootstrap'></i>Bootstrap</span>
-                                <span><i class='bx bxl-tailwind-css'></i>Tailwind</span>
+                                <span><i class='bx bxl-java'></i>Java</span>
+                                <span><i class='bx bxl-python'></i>Python</span>
                             </div>
                         </div>
 
                         <div class="skills-content">
-                            <h3>Back-End</h3>
+                            <h3>Libraries/Frameworks</h3>
                             <div class="content">
-                                <span><i class='bx bxl-python'></i>Python</span>
-                                <span><i class='bx bxl-java'></i>Java</span>
+                                <span><i class='bx bxl-react'></i></i>React.js</span>
                                 <span><i class='bx bxl-nodejs'></i>Node.js</span>
                                 <span>Express.js</span>
+                                <span><i class='bx bxl-bootstrap'></i>Bootstrap</span>
                             </div>
                         </div>
 
                         <div class="skills-content">
-                            <h3>Others</h3>
+                            <h3>Database Technologies</h3>
                             <div class="content">
                                 <span><i class='bx bx-data' ></i>MySQL</span>
                                 <span><i class='bx bxl-mongodb' ></i>MongoDB</span>
+                            </div>
+                        </div>
+                        <div class="skills-content">
+                            <h3>Tools/Platforms</h3>
+                            <div class="content">
                                 <span><i class='bx bx-git-merge' ></i></i>Git Bash</span>
                                 <span><i class='bx bxl-github' ></i>GitHub</span>
+                                <span><i class='bx bxl-visual-studio'></i>VS Code</span>
+                                <span><i class='bx bxl-microsoft' ></i>Excel</span>
+                                <span><i class='bx bxl-microsoft' ></i>Word</span>
                             </div>
                         </div>
                     </div>
